--- a/config/heroku.yml
+++ b/config/heroku.yml
@@ -10,13 +10,10 @@ production:
   app: coshx-web-production
   config:
     BUNDLE_WITHOUT: "development:test"
-#    GOOGLE_ANALYTICS: "UA-12345678-1"
+    GOOGLE_ANALYTICS: "UA-25757046-1"
 
 staging:
   app: coshx-web-staging
   config: &default
     BUNDLE_WITHOUT: "development:test"
 
-demo:
-  app: awesomeapp-demo
-  config: *default
