--- a/config/heroku.yml
+++ b/config/heroku.yml
@@ -12,9 +12,11 @@ production:
     BUNDLE_WITHOUT: "development:test"
     GOOGLE_ANALYTICS: "UA-25757046-1"
     DISQUS_SHORTNAME: "coshxlabs"
+    COSHX_HOST: "coshx.com"
 
 staging:
   app: coshx-web-staging
   config: &default
     BUNDLE_WITHOUT: "development:test"
     DISQUS_SHORTNAME: "coshxlabsstaging"
+    COSHX_HOST: "coshx-web-staging.herokuapp.com"
