--- a/config/database.yml
+++ b/config/database.yml
@@ -7,6 +7,7 @@ defaults: &defaults
 development:
   <<: *defaults
   database: coshx_development
+  host: localhost
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
