--- a/config/database.yml
+++ b/config/database.yml
@@ -12,6 +12,9 @@ development:
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-test:
+test: &test
   <<: *defaults
   database: coshx_test
+
+cucumber:
+  <<: *test
