--- a/config/heroku.yml
+++ b/config/heroku.yml
@@ -8,6 +8,7 @@
 #
 production:
   app: coshx-web-production
+  config_repo: 'https://github.com/coshx/coshx_configuration'
   config:
     BUNDLE_WITHOUT: "development:test"
     GOOGLE_ANALYTICS: "UA-25757046-1"
