--- a/config/database.yml
+++ b/config/database.yml
@@ -7,7 +7,7 @@ defaults: &defaults
 development:
   <<: *defaults
   database: coshx_development
-  #host: localhost
+  host: localhost
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -15,6 +15,7 @@ development:
 test: &test
   <<: *defaults
   database: coshx_test
+  host: localhost
 
 cucumber:
   <<: *test
