--- a/circle.yml
+++ b/circle.yml
@@ -8,7 +8,7 @@ deployment:
     branch: develop
     commands:
       - '[[ ! -s "$(git rev-parse --git-dir)/shallow" ]] || git fetch --unshallow'
-      - rake staging deploy
+      - bundle exec rake staging deploy
 machine:
   ruby:
     version: ruby-2.2.0-preview1
