--- a/config/database.yml
+++ b/config/database.yml
@@ -9,13 +9,14 @@ development:
   database: coshx_development
   host: localhost
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
 test: &test
   <<: *defaults
   database: coshx_test
   host: localhost
+
+production:
+  <<: *defaults
+  url: <%= ENV['DATABASE_URL'] %>
 
 cucumber:
   <<: *test
